--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 build
 bin
 
+.vagrant
+
 
 # Created by https://www.gitignore.io/api/git,macos,ansible,sublimetext
 # Edit at https://www.gitignore.io/?templates=git,macos,ansible,sublimetext
