--- a/goss.yaml
+++ b/goss.yaml
@@ -1,6 +1,3 @@
-command:
-  curl -u "admin:admin" 'http://localhost:8080/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)':
-    exit-status: 0
 file:
   /var/lib/jenkins:
     exists: true
@@ -24,3 +21,11 @@ user:
     - jenkins
     home: /var/lib/jenkins
     shell: /bin/bash
+http:
+  "http://localhost:8080/cli/":
+    # required attributes
+    status: 200
+    # optional attributes
+    allow-insecure: true
+    no-follow-redirects: false # Setting this to true will NOT follow redirects
+    timeout: 1000
