Define the goal in container.yml

--- a/container.yml
+++ b/container.yml
@@ -5,8 +5,9 @@ settings:
     # The Conductor container does the heavy lifting, and provides a portable
     # Python runtime for building your target containers. It should be derived
     # from the same distribution as you're building your target containers with.
-    base: centos:7
-    # roles_path:   # Specify a local path containing Ansible roles
+    base: debian:9
+    # roles_path:
+    #   - roles
     # volumes:      # Provide a list of volumes to mount
     # environment:  # List or mapping of environment variables
 
@@ -18,21 +19,12 @@ settings:
   # `run` and `deployment` commands then write generated Ansible playbooks to it.
   # deployment_output_path: ./ansible-deployment
 
-services: {}
-  # Add your containers here, specifying the base image you want to build from.
-  # To use this example, uncomment it and delete the curly braces after services key.
-  # You may need to run `docker pull ubuntu:trusty` for this to work.
-
-  # web:
-  #   from: "centos:7"
-  #   ports:
-  #     - "80:80"
-  #   command: ["/usr/bin/dumb-init", "/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
-  #   dev_overrides:
-  #     environment:
-  #       - "DEBUG=1"
-registries: {}
-  # Add optional registries used for deployment. For example:
-  #  google:
-  #    url: https://gcr.io
-  #    namespace: my-cool-project-xxxxxx   
+services:
+  jenkins:
+    from: "geerlingguy/docker-debian9-ansible:latest"
+    roles: 
+      - prepare
+      - geerlingguy.java
+      - geerlingguy.jenkins
+    ports:
+      - "8080:8080"
