--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "roles/geerlingguy.jenkins"]
 	path = roles/geerlingguy.jenkins
-	url = git@github.com:geerlingguy/ansible-role-jenkins.git
+	url = https://github.com/geerlingguy/ansible-role-jenkins.git
 [submodule "roles/geerlingguy.java"]
 	path = roles/geerlingguy.java
-	url = git@github.com:geerlingguy/ansible-role-java.git
+	url = https://github.com/geerlingguy/ansible-role-java.git
