--- a/playbook.yml
+++ b/playbook.yml
@@ -17,7 +17,9 @@
     - role: roles/geerlingguy.jenkins
       become: true
       vars:
-        jenkins_plugins: []
+        jenkins_plugin_timeout: 120
+        jenkins_plugins:
+          - workflow-aggregator # jenkins pipeline
 
   tasks:
     - name: Remove caches to trim size
@@ -26,5 +28,4 @@
         - /var/lib/apt/lists/*
         - /var/lib/jenkins/updates/default.json
         - /root/.cache
-        - /var/cache/*
         - /tmp/*
